fix: adjustment section and overlapping

--- a/css/actions.css
+++ b/css/actions.css
@@ -18,14 +18,11 @@
 .active {
     background-color: var(--white);
     width: 225px;
-    height: 41.5px;
+    height: 40px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     padding: 15px;
-    position: relative;
-    left: 25px;
-    top: -65px; 
+    transition: 3s all ease;
 }
 
 .content .modal {    
